--- a/thesis_skel/thesis_EAS.tex
+++ b/thesis_skel/thesis_EAS.tex
@@ -80,13 +80,13 @@ The development of a neutrino induced shower in comparison to a CR shower is imp
 % \end{figure}
 \begin{figure}[t!]
     \centering
-    \subcaptionbox*{ \label{sub:fig:e_CC}}{\includegraphics[width=.45\linewidth]{thesis_figures/EAS/e_CC.pdf}}
+    \subcaptionbox*{ \label{sub:fig:e_CC}}{\includegraphics[width=.45\linewidth]{thesis_figures/EAS/e_CC.png}}
     \hfill
-    \subcaptionbox*{ \label{sub:fig:mu_CC}}{\includegraphics[width=.45\linewidth]{thesis_figures/EAS/mu_CC.pdf}}
+    \subcaptionbox*{ \label{sub:fig:mu_CC}}{\includegraphics[width=.45\linewidth]{thesis_figures/EAS/mu_CC.png}}
     \hfill
-    \subcaptionbox*{ \label{sub:fig:tau_CC}}{\includegraphics[width=.45\linewidth]{thesis_figures/EAS/tau_CC.pdf}}
+    \subcaptionbox*{ \label{sub:fig:tau_CC}}{\includegraphics[width=.45\linewidth]{thesis_figures/EAS/tau_CC.png}}
     \hfill
-    \subcaptionbox*{ \label{sub:fig:nu_NC}}{\includegraphics[width=.45\linewidth]{thesis_figures/EAS/nu_NC.pdf}}
+    \subcaptionbox*{ \label{sub:fig:nu_NC}}{\includegraphics[width=.45\linewidth]{thesis_figures/EAS/nu_NC.png}}
     \caption{Sketch of different possible interactions of UHE neutrinos in the atmosphere.}
     \label{fig:NU_EAS_channels}
 \end{figure}
