--- a/thesis_skel/thesis_setup.tex
+++ b/thesis_skel/thesis_setup.tex
@@ -74,7 +74,7 @@ The PMT signals in the WCDs are digitised by a 40MHz 10 bit \textit{flash analog
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[width=\textwidth]{thesis_figures/Setup/VEM_Calib_SD.jpg}
+  \includegraphics[width=\textwidth]{thesis_figures/Setup/VEM_Calib_SD.png}
   \caption{Left:The charge histogram (black), is the sum of the responses of all three
   PMTs above the electronic noise threshold, while the dashed red line
   represents the reference measurement done by an external muon telescope.
