--- a/thesis_skel/thesis_follow.tex
+++ b/thesis_skel/thesis_follow.tex
@@ -17,10 +17,10 @@ In this chapter, the point source sensitivity to $\nu$ events of the SD array is
 The field of view (FOV) of the Observatory and the corresponding neutrino efficiency is related to the zenith angle which in turn is related to the declination. For a given point-like source at declination $\delta$ and right ascension $\alpha$ (in equatorial coordinates), the time zenith angle which is the $\theta$ dependence at a certain time, $t$ is given by:
 \begin{equation}
   \label{eq:zenith_angle_time}
-  \mathrm{cos \theta(t) = sin \lambda \,sin \delta+ cos \lambda \, cos \delta \,sin (2\pi \frac{t}{T} - \alpha)}
+  cos \theta(\text{t}) = sin \lambda \,sin \delta+ cos \lambda \, cos \delta \,sin (2\pi \frac{\text{t}}{\text{T}} - \alpha)
 \end{equation} 
 where $T$ is the duration of one sidereal day and $\lambda$ is the latitude of the observer ($\lambda = -35.2^{\circ}$ for Pierre Auger Observatory). 
-Fig.~\ref{fig:Auger_FoV} shows the FOV bands for different neutrino search channels (DG$\mathrm{_{low}}$, DG$\mathrm{_{high}}$, ES). These bands are plotted in equitorial coordinates as a function of $\mathrm{\alpha - t _{GS}}$ where $\mathrm{t_{GS}}$ is the Greenwich Sidereal Time (GST) converted to for a mean longitude of the Observatory, $l$ calculated as $\mathrm{t_{GS}= 2\pi t/T + l}$. The sensitive declination ranges for different $\mathrm{t_{GS}}$ can be read from the plot which is very useful for real-time transient follow-up. For DG$\mathrm{_{low}}$ showers the SD of the Pierre Auger Observatory is sensitive to declinations between $\delta \sim -85^{\circ} - 40^{\circ}$. Another way to denote sky coverage for different neutrino searches at Auger is by calculating the time a source is visible to the Observatory for a particular declination. This is plotted in fig.~\ref{fig:Auger_FoV} for all three search channels. As it can be seen from the plot all three channels are the most sensitive at two ends of their sensitive declination ranges (DG$\mathrm{_{low}}$-$\delta \sim -70^{\circ}, 35^{\circ}$) which is a consequence of smaller variation in zenith angle in time for certain directions. The sensitivity sharply decreases beyond these declination values. In the middle of these \textit{two horns} is a plateau like region. It is also seen that generally the fraction of time a source is visible is comparable in the DG$\mathrm{_{low}}$ and DG$\mathrm{_{high}}$ range with both being higher in the ES range due to the size of the zenith angle windows. The fraction of visible time for vertical showers is also plotted. Even though this fraction of time is significantly high, currently no neutrino search is performed for this region as it is very difficult to differentiate between a cosmic ray and neutrino EAS for this zenith angle range.
+Fig.~\ref{fig:Auger_FoV} shows the FOV bands for different neutrino search channels (DG$\mathrm{_{low}}$, DG$\mathrm{_{high}}$, ES). These bands are plotted in equatorial coordinates as a function of $\mathrm{\alpha - t _{GS}}$ where $\mathrm{t_{GS}}$ is the Greenwich Sidereal Time (GST) converted to for a mean longitude of the Observatory, $l$ calculated as $\mathrm{t_{GS}= 2\pi t/T + l}$. The sensitive declination ranges for different $\mathrm{t_{GS}}$ can be read from the plot which is very useful for real-time transient follow-up. For DG$\mathrm{_{low}}$ showers the SD of the Pierre Auger Observatory is sensitive to declinations between $\delta \sim -85^{\circ} - 40^{\circ}$. Another way to denote sky coverage for different neutrino searches at Auger is by calculating the time a source is visible to the Observatory for a particular declination. This is plotted in fig.~\ref{fig:Auger_FoV} for all three search channels. As it can be seen from the plot all three channels are the most sensitive at two ends of their sensitive declination ranges (DG$\mathrm{_{low}}$-$\delta \sim -70^{\circ}, 35^{\circ}$) which is a consequence of smaller variation in zenith angle in time for certain directions. The sensitivity sharply decreases beyond these declination values. In the middle of these \textit{two horns} is a plateau like region. It is also seen that generally the fraction of time a source is visible is comparable in the DG$\mathrm{_{low}}$ and DG$\mathrm{_{high}}$ range with both being higher in the ES range due to the size of the zenith angle windows. The fraction of visible time for vertical showers is also plotted. Even though this fraction of time is significantly high, currently no neutrino search is performed for this region as it is very difficult to differentiate between a cosmic ray and neutrino EAS for this zenith angle range.
 
 \begin{figure}[t!]
   \centering
@@ -43,7 +43,15 @@ The effective area is flavour dependent since for each flavour the shower develo
   \mathrm{\mathcal{A_{i,c}}(E_{\nu},\theta(t),t) = \frac{\sigma^{i,c}(E_{\nu})}{m_N} \int_{X} \, \varepsilon_{i,c}(E_{\nu},\theta(t),t) \, A_{6T5} n_{hex}(t) \, dX}
 \end{equation}
 
-where $\varepsilon_{i,c}$ is the neutrino identification efficiency for a 6T5 unit. The declination dependence is taken into account by the $\mathrm{\theta(t)}$ dependence of the efficiency. The effective area for electron neutrinos with CC interactions in km$^2$ for 2016 array and different theta is plotted in fig.~\ref{}. The effective area increases with increasing primary energy. It also increases with zenith angles till $\sim$70$^\circ$ after which there is a slight decrease in the effective area which is due to the decrease in neutrino sensitivity at higher zenith angles discussed earlier in section~\ref{subsec:nu_sel_nudeteff}. 
+\begin{figure}[t!]
+  \centering
+  \includegraphics[width=14.5cm]{thesis_figures/PointLimits/EffArea_vs_Theta_CC_optim.pdf}
+  \caption{Effective Area}
+  \label{fig:Eff_Area}
+\end{figure}
+
+
+where $\varepsilon_{i,c}$ is the neutrino identification efficiency for a 6T5 unit. The declination dependence is taken into account by the $\mathrm{\theta(t)}$ dependence of the efficiency. The instantaneous effective area for electron neutrinos with CC interactions in km$^2$ and different theta is plotted in fig.~\ref{fig:Eff_Area}. The effective area increases with increasing primary energy. It also increases with zenith angles till $\sim$70$^\circ$ after which there is a slight decrease in the effective area which is due to the decrease in neutrino sensitivity at higher zenith angles discussed earlier in section~\ref{subsec:nu_sel_nudeteff}. 
 
 The exposure to point-like sources of UHE neutrinos can then be calculated by integrating the effective area for a given time interval and summing over the different flavours and channels as follows:
 \begin{equation}
@@ -67,8 +75,14 @@ The exposure to point-like sources of UHE neutrinos can then be calculated by in
   \label{fig:Exp_dec}
 \end{figure}
 
+\begin{figure}[t!]
+  \centering
+  \includegraphics[width=14.5cm]{thesis_figures/PointLimits/Hexagons_2004_2021_forSrijan.pdf}
+  \caption{Number of Hexagons}
+  \label{fig:Hexagon_time}
+\end{figure}
 
-The exposure is $\delta$ dependent due to the dependence of effective area on $\theta(t)$. The effective area can also change with time due to the changes in the number of hexagons $n_{hex}(t)$. This change has been visualized for the DG$_{low}$ channel for the time period of this search in fig.~\ref{}. As it can be seen in the plot the number is relatively stable especially in the period of one sidereal day apart from few outages which are removed from the searches. The directional exposure for the DGL channels for different fixed energies between 2014-2021 is shown in fig.~\ref{fig:Exp_dec}. The dashed line shows the exposure calculated in this study by including the new triggers while the solid line shows the exposure calculated with the previous analysis for the same time period. Similar to the exposure calculated for the diffuse flux the exposure is significantly improved for lower energies with the improvement decreasing for higher energies. The shape of the exposure is similar to the observation time plot in fig.~\ref{fig:time_per_day} with the maximum exposure peaks seen at the same declinations. 
+The exposure is $\delta$ dependent due to the dependence of effective area on $\theta(t)$. The effective area can also change with time due to the changes in the number of hexagons $n_{hex}(t)$. This change has been visualized for the DG$_{low}$ channel for the time period of this search in fig.~\ref{fig:Hexagon_time}. As it can be seen in the plot the number is relatively stable especially in the period of one sidereal day apart from few outages which are removed from the searches. The directional exposure for the DGL channels for different fixed energies between 2014-2021 is shown in fig.~\ref{fig:Exp_dec}. The dashed line shows the exposure calculated in this study by including the new triggers while the solid line shows the exposure calculated with the previous analysis for the same time period. Similar to the exposure calculated for the diffuse flux the exposure is significantly improved for lower energies with the improvement decreasing for higher energies. The shape of the exposure is similar to the observation time plot in fig.~\ref{fig:time_per_day} with the maximum exposure peaks seen at the same declinations. 
 
 % As it can be seen in~\cite{} ES exposure published in~\cite{} is also plotted for comparison. It can be seen that generally the DG$_{low}$ point source exposure is lower than that of ES expect at higher energies where it is comparable. At these energies the different sensitive zenith angle ranges between the channels are the only differentiating factors for the exposure distribution. 
 
@@ -78,7 +92,7 @@ Since no neutrino candidate was discovered in the search window a point-source n
 \begin{equation}
   \mathrm{N_{expected}(\delta) = \int_{E_{min}}^{E_{max}}  \phi(E_{\nu}) \, \xi(E_{\nu}, \delta) \, dE_{\nu}}
 \end{equation}
-The point source flux is assumed to be independent of time and is assumed to be characterized as a power law, $\phi = k_{PS} E_{\nu}^{-2}$ for all declinations. The integrated upperlimit from each source can then be further calculated as follows:
+The point source flux is assumed to be independent of time and is assumed to be characterized as a power law, $\phi = k_{PS} E_{\nu}^{-2}$ for all declinations. The integrated upper-limit from each source can then be further calculated as follows:
 
 \begin{equation}
   \label{eq:point_flux_limit}
@@ -96,6 +110,7 @@ For this study initially a time period from 1 Jan 2014 till 31 December 2021 is 
 \end{figure}
 
 The 90\% C.L. declination dependent upper-limit for the DG$_{low}$ channel is shown in fig.~\ref{fig:Dec_limit_new old}. The limit is the stringent for the times the source is seen the longest. The limit is calculated for the energy range $\sim$ 2.0 $\times 10^{18}$eV - $\times 10^{20}$eV. The dependence of energy intervals is minimal. This limit is also compared to the limit obtained from the previous analysis for the same time period in the same figure. As it can be seen the limit is significantly improved with new triggers fulfilling one of the primary objectives of this thesis. Further a combined limit is calculated where the old analysis is applied for the time period 2004-2013 and the analysis presented in this thesis is applied for the time period 2014-2021. This combination along with the limits from the separate time periods is shown in Fig.~\ref{fig:Dec_limit_comb1}. Further this combination is also compared to the point-like source limit calculated with the old analysis for the time period 2004-2021. This is presented in fig.~\ref{fig:Dec_limit_comb2}. For the best declination range of the DG$_{low}$ channel the limit is improved by a factor of $\sim$ 2.5???.
+\todo{Get this number }
 
 \begin{figure}[t!]
   \centering
@@ -118,11 +133,13 @@ The diffuse limit can be written as:
   \mathrm{k_{PS}^{90\%CL} < \frac{N_{Up}}{\int_{log_{10}E_{min}}^{log_{10}E_{max}} \int_{-\pi/2}^{\pi/2}2\pi \cdot cos(\delta) \cdot E_{\nu}^{-1} \cdot \xi(E_{\nu}, \delta) \cdot ln(10) \cdot d(log_{10}(E_{\nu})) \cdot d\delta}} 
 \end{equation}
 
+\todo{Calculate this }
 The diffuse limit from point source analysis is given as: 
 \begin{equation}
   \mathrm{k_{PS}^{90\%CL} < 2.0000 \times 10^{-8} GeV cm^{-2} s^{-1} sr^{-1}}
 \end{equation}
 
+\todo{Write a bit more about crosschecks}
 Which agrees with the value mentioned in eq.~\ref{eq:final_lim}. It is also important to mention that even though the overall sensitive declination range for the DG$_{low}$ analysis is small in comparison to other channels~\cite{Aab_2019_point}, the improvement presented in this thesis is still important as the sensitive declination ranges are not fully overlapping. Thus, if there is a point source at between declinations $ \delta \in [-80^{\circ}- -68^{\circ}]$ then DG$_{low}$ channel offers the only window at Auger to see UHE$\nu_s$ from such a source.  
 
 \begin{figure}[t!]
@@ -131,6 +148,9 @@ Which agrees with the value mentioned in eq.~\ref{eq:final_lim}. It is also impo
   \caption{Limit comparison 3}
   \label{fig:Dec_limit_comb3}
 \end{figure}
+
+\todo{Make table of sources}
+The limit obtained in this analysis was then used to constraint some interesting sources which exclusively lie in the DG$_{low}$ sensitive range. The sources were selected based on their declination and expected neutrino energies which could lie in the region explored.  
 
 
 
